# AURA-mumbai-hacks

./: .gitignore  README.md  package-lock.json  package.json
backend/: .gitignore  Dockerfile  alembic.ini  conda_setup.sh  create_db.sql  main.py  migrations_add_hospital.sql  migrations_add_onboarding.sql  pyproject.toml  requirements.txt  run_backend.sh  setup_env.sh
backend/alembic/: env.py
backend/app/: __init__.py
backend/app/api/v1/: __init__.py  ai.py  appointments.py  auth.py  consultations.py  doctors.py  documents.py  hospitals.py  messages.py  patients.py  recommendations.py  router.py  surge.py
backend/app/core/: config.py  database.py  dependencies.py  logging_config.py  scheduler.py  security.py
backend/app/models/: __init__.py  appointment.py  consultation.py  document.py  hospital.py  message.py  recommendation.py  surge_prediction.py  user.py
backend/app/schemas/: __init__.py  appointment.py  consultation.py  document.py  hospital.py  message.py  recommendation.py  surge.py  user.py
backend/app/services/: __init__.py  ai_agents.py  ai_agents_langgraph.py  external_apis.py  surge_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(doctor)/: layout.tsx
frontend/src/app/(doctor)/doctor-appointments/: page.tsx
frontend/src/app/(patient)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: auth-provider-wrapper.tsx
frontend/src/components/ui/: calendar-view.tsx  label.tsx
frontend/src/components/upload/: file-uploader.tsx
(+25 files in other folders)
